2002-09-21 17:48  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSFontPanel.m (-_familySelectionChanged:, score_difference):
	If an exact match for the wanted weight and traits can't be found,
	score all faces in the new family and select the one that differs
	the least.

2002-09-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile: Set flags to generate documentation using
	templates.

2002-09-18  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSSplitView.m ([NSSplitView -initWithCoder:]):
	set _never_displayed_before to YES.
	* Source/NSFont.m: rearrange the last change to make
	it look like other classes' initWithCoder/encodeWithCoder
	* Source/NSTextView.m: do not call _blink directly
	(suggested by Nicola Pero).
	* Source/NSButtonCell.m 
	([NSButtonCell -drawInteriorWithFrame:inView:]):
	if the button is NSImageOnly, draw the dotted frame at
	the right location.
	
2002-09-16 19:28  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSFont (+initialize, -initWithCoder:, -encodeWithCoder:):
	Encode and decode matrixExplicitlySet, and guess its value when
	loading old encoded objects.

2002-09-16 19:05  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSWindow.m (-close): Retain and release self to make sure
	it isn't deallocated until we're done.

2002-09-15  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSStringDrawing.m 
	drawRun() now correctly flags that it wants some temporary memory
	allocated. The old behaviour resulted in a memory leak.
	* Headers/gnustep/gui/NSBrowser.h
	Declare new MacOSX method [drawTitleOfColumn:inRect:]. Removed
	unused ivar _browserCellClass. Replaced ivar _titleCell with a
	static variable used for all browsers.
	* Source/NSBrowser.m
	Use _lastColumnLoaded instead of _lastVisibleColumn  in
	[selectAll:]. Implemented MacOSX [drawTitleOfColumn:inRect:]. 
	Optimized [matrixInColumn:] and use it where suitable.
	Moved calls to [_adjustMatrixOfColumn:] inside of [_performLoadOfColumn:]
	